--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset='utf-8'>
-        <title>Test Cases for Homework</title>
+        <title>Every code —— JS每日一练</title>
         <script src="/lib/jquery-2.1.0.min.js"></script>
         <script src="/qunit/qunit.js"></script>
         <script src="/qunit/async.js"></script>
